--- a/ContactsDemo/ContactsDemo/Base.lproj/Main.storyboard
+++ b/ContactsDemo/ContactsDemo/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.67843137249999996" blue="0.35686274509999999" alpha="1" colorSpace="deviceRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
