--- a/ShareSDKDemo/ShareSDKDemo/Base.lproj/Main.storyboard
+++ b/ShareSDKDemo/ShareSDKDemo/Base.lproj/Main.storyboard
@@ -19,17 +19,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Rc-HE-Mt0">
-                                <rect key="frame" x="153.5" y="328.5" width="68" height="30"/>
-                                <state key="normal" title="shareSDK"/>
+                                <rect key="frame" x="162.5" y="328.5" width="50" height="30"/>
+                                <state key="normal" title="wechat"/>
                                 <connections>
-                                    <action selector="showShareSDKAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dah-xa-chg"/>
+                                    <action selector="shareWechatAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="h6i-Kk-CME"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l3C-bz-KZc">
+                                <rect key="frame" x="172" y="385" width="30" height="30"/>
+                                <state key="normal" title="QQ"/>
+                                <connections>
+                                    <action selector="shareQQAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="irR-5I-ZC2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dkc-Rc-bt1">
+                                <rect key="frame" x="167" y="445" width="41" height="30"/>
+                                <state key="normal" title="weibo"/>
+                                <connections>
+                                    <action selector="shareWeiboAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Tr5-Dw-I4J"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="l3C-bz-KZc" firstAttribute="centerX" secondItem="8Rc-HE-Mt0" secondAttribute="centerX" id="53e-cA-2nB"/>
+                            <constraint firstItem="dkc-Rc-bt1" firstAttribute="top" secondItem="l3C-bz-KZc" secondAttribute="bottom" constant="30" id="DHh-D4-BJK"/>
                             <constraint firstItem="8Rc-HE-Mt0" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="JXF-ud-bMq"/>
                             <constraint firstItem="8Rc-HE-Mt0" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="MUB-Qv-mIE"/>
+                            <constraint firstItem="dkc-Rc-bt1" firstAttribute="centerX" secondItem="l3C-bz-KZc" secondAttribute="centerX" id="a07-aO-CSt"/>
+                            <constraint firstItem="l3C-bz-KZc" firstAttribute="top" secondItem="8Rc-HE-Mt0" secondAttribute="bottom" constant="26.5" id="ilG-kf-4rf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
